<resources>
    <string name="app_name">Puzzle</string>
    <string name="all_cancel">취소</string>
    <string name="all_accept">확인</string>
    <string name="all_next">다음</string>
    <string name="all_go_back">뒤로</string>
    <string name="all_setting">설정</string>
    <string name="all_save">저장</string>
    <string name="all_yes">네</string>
    <string name="all_no">아니요</string>
    <string name="all_golf_course">골프장</string>

    <!--date-->
    <string name="full_date_format">%d년 %02d월 %02d일 %02d시 %02d분</string>
    <string name="time_AM_date_format">오전 %d시</string>
    <string name="time_PM_date_format">오후 %d시</string>

    <!--activity_main-->
    <string name="main_home">홈</string>
    <string name="main_mygallery">내 갤러리</string>
    <string name="main_addvideo">추가하기</string>
    <string name="main_othersgallery">다른 갤러리</string>
    <string name="main_mypage">마이 페이지</string>

    <!--fragment_home-->
    <string name="home_background_image_description">홈 배경이미지</string>
    <string-array name="welcome_text">
        <item>오늘도 나이스샷^^</item>
        <item>즐거운 퍼팅되세요!</item>
        <item>환영합니다</item>
        <item>당신의 퍼팅영상을 공유해보세요!</item>
        <item>오늘은 신기록을 세울 수 있을 거예요!</item>
    </string-array>
    <string name="display_name_format">%s님</string>
    <string name="display_anonymous">익명</string>
    <string name="weather_temp_format">%dº</string>
    <string name="weather_feels_like_temp_format">체감온도 %dº</string>
    <string name="weather_slash_divider">/</string>
    <string name="green_lean_text">그린 기울기 구하기</string>
    <string name="green_lean_image_description">그린 기울기 구하기 버튼</string>
    <string name="logo_dsecription">퍼즐 로고</string>
    <string name="location_empty">위치 정보가 없습니다</string>

    <!--acitivty_camera-->
    <string name="camera_capture_start">녹화</string>
    <string name="camera_capture_stop">중지</string>
    <string name="camera_video_saved">영상이 저장되었습니다.</string>
    <string name="camera_no_permission">권한을 확인해주세요.</string>

    <!--add_video-->
    <string name="addvideo_error_durationlimit">20초 이상의 동영상은 업로드할 수 없습니다.</string>
    <string name="addvideo_take_video">동영상 촬영하기</string>
    <string name="addvideo_search_gallery">갤러리 보기</string>

    <!--upload-->
    <string name="upload_title">업로드</string>
    <string name="upload_isprivate_status">공개 여부</string>
    <string name="upload_set_public">공개</string>
    <string name="upload_set_private">비공개</string>
    <string name="uploadstep1_saying">문구</string>
    <string name="upload_canceldialog_title">정말로 취소하시겠어요?</string>
    <string name="upload_canceldialog_supporting_text">영상은 저장되지 않습니다.</string>
    <string name="upload2_savedialog_title">저장 하시겠어요?</string>
    <string name="upload2_savedialog_supporting_text_private">영상은 비공개로 저장됩니다.</string>
    <string name="upload2_savedialog_supporting_text_public">영상은 공개로 저장됩니다.</string>
    <string name="upload2_publicuploaddialog_title">영상을 공개로 전환합니다</string>
    <string name="upload2_publicuploaddialog_supporting_text">• 다른 사용자의 피드에 영상이 표시됩니다.\n• 다른 사용자가 반응을 남길 수 있습니다.</string>
    <string name="upload2_input_golf_course_hint">골프장 이름을 입력해주세요</string>
    <string name="upload2_input_memo_hint">메모를 입력해보세요</string>
    <string name="upload_complete">영상이 업로드 됐어요!</string>
    <string name="upload_fail">영상 업로드에 실패했습니다, 다시 시도해주세요.</string>
    <string name="upload2_compress_title">비디오 파일 압축 중…</string>
    <string name="upload_memo_empty">메모를 입력해주세요</string>
    <string name="upload_memo_overflow">메모는 140자까지 작성할 수 있습니다</string>
    <string name="upload_location_empty">골프장 이름을 입력해주세요</string>
    <string name="upload_location_overflow">골프장 이름은 50자까지 작성할 수 있습니다.</string>

    <!--network-->
    <string name="network_fail">네트워크 통신에 실패했습니다</string>

    <!--permission-->
    <string name="location_permission">위치 권한을 허용해주세요\n설정->애플리케이션->퍼즐에서\n 위치권한을 허용할 수 있습니다</string>
    <string name="location_service_off">네트워크 및 위치 서비스를 연결해주세요</string>

    <!--description-->
    <string name="weather_icon_description">%d도 %s</string>
    <string name="weather_refresh_btn_description">날씨 재요청 버튼</string>
    <string name="camera_button_description">카메라 녹화 버튼</string>
    <string name="recyclerView_item_thumbnail_description">영상 썸네일</string>

    <!--acitivty_camera-->
    <string name="playvideo_to_private">나만 보기</string>
    <string name="playvideo_to_public">공유하기</string>
    <string name="playvideo_delete">삭제</string>

    <!--mypage-->
    <string name="mypage_title">오늘도 한 퍼팅 하셨나요?</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="logout">로그아웃</string>
    <string name="logout_remind">정말 로그아웃 하시겠습니까?</string>
    <string name="withdraw">회원 탈퇴</string>
    <string name="withdraw_remind">회원탈퇴를 하시면 퍼팅 영상을 포함한 저장되어 있던 모든 정보가 삭제됩니다. \n정말 회원탈퇴 하시겠습니까?</string>
    <string name="open_source_lib">오픈소스 라이브러리</string>
    <string name="input_new_nickname">새로운 닉네임을 입력하세요.</string>
    <string name="input_nickname_hint">닉네임을 입력하세요.</string>
    <string name="input_nickname_again">닉네임을 다시 입력하세요.</string>
    <string name="nickname_change_impossible">닉네임을 변경할 수 없습니다!</string>
    <string name="complete">완료</string>

    <!--my gallery-->
    <string name="mygallery_add_video_text">멋진 퍼팅 영상을 촬영해 보세요!</string>
    
    <!--other gallery-->
    <string name="othergallery_not_found_text">영상이 없네요 ㅠ.ㅠ\n다른 사람들에게\n 자신의 퍼팅 영상을\n 공유해보세요!</string>
    <string name="gallery_item_icon_description">동영상 위치 정보 아이콘</string>
    <string name="othergallery_orderby_new">최신순</string>
    <string name="othergallery_orderby_like">좋아요순</string>

    <!--gallery-->
    <string name="gallery_paging_error">다음 데이터를 불러오는데 실패했습니다.</string>
    <string name="gallery_init_load_error">데이터를 불러오는데 실패했습니다.</string>
    <string name="gallery_end_paging">더이상 표시할 데이터가 없습니다.</string>
    <string name="gallery_retry">재시도</string>
    <string name="gallery_check">확인</string>
    <string name="search_hint">골프장 검색하기</string>

    <!--play video-->
    <string name="play_share_title">공유하기</string>
    <string name="play_hiding_title">나만보기</string>
    <string name="play_share_message">동영상을 공유하시겠습니까?</string>
    <string name="play_hiding_message">동영상을 나만 보시겠습니까?</string>
    <string name="play_delete_title">삭제하기</string>
    <string name="play_delete_message">동영상을 정말 삭제하시겠습니까?</string>
</resources>